--- a/ui.html
+++ b/ui.html
@@ -1,8 +1,5 @@
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/thomas-lowry/figma-plugin-ds/dist/figma-plugin-ds.css">
 
-
-
-
 <div class="body">
   <div>
     <ul class="menu-bar">
@@ -17,7 +14,22 @@
 
 
   <!-- for mesh gradient -->
+  <!-- <div id="meshGradientInput">
 
+
+    <div class="switch-container">
+      <span class="switch-label">Light Bg</span>
+      <label class="switch" for="darkbg">
+
+        <input type="checkbox" id="darkbg" value="dark">
+        <span class="slider round"></span>
+
+      </label>
+      <span class="switch-label">dark Bg</span>
+
+    </div>
+
+  </div> -->
 
 
   <!-- for linear gradient -->
@@ -77,7 +89,6 @@
   }
 
 </script>
-<!-- Standard link tag-->
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Karla:ital,wght@0,400;0,700;1,500&family=Space+Grotesk:wght@300;400;500&display=swap');
 </style>
@@ -108,7 +119,6 @@
     display: inline;
   }
 
-  /* .linear {} */
 
   .palette-input {
     flex: none;
@@ -165,14 +175,13 @@
     text-align: center
   }
 
-
+/* switch toggle style */
   .switch {
     display: block;
     width: 60px;
     height: 34px;
   }
 
-  /* Rounded sliders */
   .slider.round {
     border-radius: 34px;
   }
